# cnd-2025

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.cursor/: mcp.json
slides/cnd_2025/: index.html  index.md
src/: agent.py  load.py  main.py  models.py  process.py  prompt.md  settings.py
src/data/: process.py
src/data/files/: locations.csv  shapes.csv  sightings.csv
src/files/: locations.csv  nasa_sightings.csv  shapes.csv  sightings.csv
