[project]
name = "cnd-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "neo4j-rust-ext>=5.28.2.1",
    "pydantic>=2.11.9",
    "pydantic-ai>=1.0.8",
    "structlog>=25.4.0",
    "polars>=1.33.1",
]

[dependency-groups]
lint = ["mypy>=1.18.1", "ruff>=0.13.0"]
test = ["pytest>=8.4.2", "pytest-cov>=7.0.0"]

[tool.mypy]
exclude_gitignore = true
disallow_untyped_defs = true
warn_return_any = true
ignore_missing_imports = true

[tool.ruff.lint]
extend-select = ["I"]
